# studying

Any/: Any.pro  any.hpp  main.cpp
AtomicStruct/: AtomicStruct.sln
AtomicStruct/AtomicStruct/: AtomicStruct.vcxproj  Source.cpp
AtomicStruct/Debug/: AtomicStruct.ilk
ErrorCodes/: ErrorCodes.sln
ErrorCodes/Debug/: ErrorCodes.ilk
ErrorCodes/ErrorCodes/: ErrorCodes.cpp  ErrorCodes.vcxproj  ErrorCodes.vcxproj.filters
Function/: Function.sln
Function/Debug/: Function.ilk
Function/Function/: Function.vcxproj  Function.vcxproj.filters  function.hpp  main.cpp
InterfaceFactory/: InterfaceFactory.sln
InterfaceFactory/Debug/: InterfaceFactory.ilk
InterfaceFactory/InterfaceFactory/: InterfaceFactory.h  InterfaceFactory.vcxproj  InterfaceFactory.vcxproj.filters  main.cpp
MyAllocator/: MyAllocator.VC.db  MyAllocator.sln
MyAllocator/Debug/: MyAllocator.ilk
MyAllocator/MyAllocator/: MyAllocator.cpp  MyAllocator.h  MyAllocator.vcxproj  MyAllocator.vcxproj.filters  ReadMe.txt  consolecolour.cpp  consolecolour.h  main.cpp  node.cpp  node.h  stdafx.cpp
MyAllocator2VS/: MyAllocator2VS.sln
MyAllocator2VS/Debug/: MyAllocator2VS.ilk
MyAllocator2VS/MyAllocator2VS/: MyAllocator2VS.vcxproj  MyAllocator2VS.vcxproj.filters  main.cpp  membitset.cpp  membitset.h  memchunk.cpp  memchunk.h  myallocator.cpp  myallocator.h
MyVector/: MyVector.sln
MyVector/Debug/: MyVector.ilk
MyVector/MyVector/: MyVector.cpp  MyVector.h  MyVector.hpp  MyVector.vcxproj  main.cpp
PluginArc/: PluginArc.sln
PluginArc/Debug/: PluginArc.ilk  PluginExample.exp  PluginExample.ilk  PluginExample.lib
PluginArc/PluginArc/: PluginArc.vcxproj  PluginArc.vcxproj.filters  main.cpp  object_model.cpp  object_model.h  plugin_export_interface.h
ScopedCaller/: ScopedCaller.pro  main.cpp  scoped_caller.h
SmartPointer/: SmartPointer.sln
StringCalc/: StringCalc.sln
TaskTable/: TasksTable.pro  adddialog.cpp  adddialog.h  duration.h  main.cpp  mainwindow.cpp  mainwindow.h  newaddresstab.cpp  tablemodel.cpp  tablemodel.h  taskswidget.cpp  taskswidget.h
TaskTableCMake/: CMakeLists.txt
TaskTableCMake/project/: CMakeLists.txt
TaskTableCMake/project/datamodel/: CMakeLists.txt
TaskTableCMake/project/datamodel/include/: duration.h  tablemodel.h  task.h
TaskTableCMake/project/datamodel/src/: task.cpp
TaskTableCMake/project/ui/: CMakeLists.txt
TaskTableCMake/project/ui/forms/: mainwindow.ui
TaskTableCMake/project/ui/include/: adddialog.h  mainwindow.h  taskswidget.h  ui_mainwindow.h
TaskTableCMake/project/ui/src/: adddialog.cpp  taskswidget.cpp
TetrisCmake/: CMakeLists.txt
TetrisCmake/project/libs/: CMakeLists.txt
TetrisCmake/project/libs/include/: random_uint32_t.h  tetris.h  tetris_object.h
TetrisCmake/project/libs/rand_num_gen/: CMakeLists.txt
TetrisCmake/project/libs/rand_num_gen/include/: random_uint32_t.h
TetrisCmake/project/libs/rand_num_gen/src/: random_uint32_t.cpp
TetrisCmake/project/libs/tetris_engine/: CMakeLists.txt
TetrisCmake/project/libs/tetris_engine/src/: tetris.cpp
TetrisCmake/project/libs/tetris_obj/: CMakeLists.txt
TetrisCmake/project/libs/tetris_obj/include/: tetris_object.h
TetrisCmake/project/libs/tetris_obj/src/: tetris_object.cpp
ThreadsPoolVS/: ThreadsPoolVS.sln
Variant/: main.cpp  variant.hpp  variant.pro
(+281 files in other folders)
